# Platfrom_G2

./: .gitignore  .gitmodules  README.md  esp32_serial_logger.py
django_backend/: .gitignore  db.sqlite3  requirements.txt  task_manager.py
django_backend/django_backend/: asgi.py  consumers.py  middleware.py  routing.py  settings.py  urls.py
django_backend/main_page/: admin.py  apps.py  models.py  mqtt.py  serializer.py  tests.py  token.py  urls.py  urls_v1.py  views.py
esp32_idf/: .gitignore  AGENTS.md  AGENTS_2026_02_26.md  AGENTS_2026_03_02.md  AGENTS_2026_03_05.md  AGENTS_2026_03_15.md  AGENTS_2026_03_20.md  CMakeLists.txt  Developer_Notes.md  ESP32_Project_Todo_List_v2.md  FIX_IDF_ENV.md  analyze.md  esp_analysis.py  flash_esp32.ps1  gpio14_onewire_analyzer.py  network_test.ps1  partitions.csv  quick_flash.ps1  sdkconfig  sdkconfig.old
esp32_idf/main/: CMakeLists.txt  Kconfig.projbuild  heating_detect.c  heating_detect.h  led.c  led_strip_encoder.c  led_strip_encoder.h  main.c  main.h  monitor.c  monitor.h  mqtt.c  pcnt.c  pid.c  pwm.c  wifi.c
network_connect_log/: esp32_log_20260311_154039.txt  esp32_log_20260311_224104.txt  esp32_log_20260313_183640.txt  esp32_log_20260314_141558.txt  esp32_log_20260314_141931.txt  esp32_log_20260314_142047.txt  esp32_log_20260320_174338.txt
peripherals/: KSY30_pump_config.py  KSY30_syringe_pump_testing.py  RoticArm_Gripper_test.py  Syringe_Model.py  Turntable_host_drive.py  motor_driver.py  motor_driver_config.py  robo_arm_config.py  robo_arm_driver.py
vue_frontend/: package-lock.json  package.json  pnpm-lock.yaml
(+242 files in other folders)
