idf_component_register(
    SRCS 
        "monitor.c" 
        "led.c" 
        "led_strip_encoder.c" 
        "main.c" 
        "wifi.c" 
        "mqtt.c" 
        "pwm.c" 
        "pcnt.c" 
        "pid.c" 
        "heating_detect.c"
    INCLUDE_DIRS 
        "."
    PRIV_REQUIRES 
        logic_analyzer_hal
        logic_analyzer_sump
)
